[gd_scene load_steps=4 format=3 uid="uid://624wid0ru6tb"]

[ext_resource type="Script" uid="uid://o6tis14cfg68" path="res://place_tower.gd" id="1_tfbh3"]
[ext_resource type="PackedScene" uid="uid://b1c3v7tn4f2wr" path="res://arrow_tower.tscn" id="2_2pa1o"]
[ext_resource type="Texture2D" uid="uid://pj6do6ap73si" path="res://Art/Arrow Tower.png" id="2_o7yil"]

[node name="PlaceTower" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_tfbh3")
arrow_tower_scene = ExtResource("2_2pa1o")

[node name="PlaceTowerButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
toggle_mode = true

[node name="TowerSelectPanel" type="Panel" parent="PlaceTowerButton"]
layout_mode = 2
offset_left = -256.0
offset_top = -216.0
offset_right = 360.0
offset_bottom = -24.0
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="PlaceTowerButton/TowerSelectPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="PlaceTowerButton/TowerSelectPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="ArrowTowerSelect" type="Button" parent="PlaceTowerButton/TowerSelectPanel/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PlaceTowerButton/TowerSelectPanel/MarginContainer/GridContainer/ArrowTowerSelect"]
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
texture = ExtResource("2_o7yil")
expand_mode = 1

[connection signal="toggled" from="PlaceTowerButton" to="." method="_on_place_tower_button_toggled"]
[connection signal="pressed" from="PlaceTowerButton/TowerSelectPanel/MarginContainer/GridContainer/ArrowTowerSelect" to="." method="_on_arrow_tower_select_pressed"]
